# dream-inertia

./: .gitignore  LICENSE.md  Makefile  README.md  dream-inertia.opam  dream-inertia.opam.locked  dream_inertia.opam  dune-project  semgrep-analysis.yml
.github/workflows/: ci.yml
example/: .gitignore  LICENSE.md  Makefile  dune  dune-project  example.ml  index.eml.html  package-lock.json  package.json  vite.config.js  webpack.config.js
example/assets/: dune
example/lib/: dune  loader.ml
example/src/: dune  example.ml  index.eml.html
example/src/js/: main.js  main.ts  style.scss  types.d.ts
example/src/js/Pages/: Error.svelte  Error.vue  Home.svelte  Home.vue  Layout.svelte  Login.svelte  Users.vue
example/src/js/components/: Table.vue
example/src/lib/: dune  loader.ml
example/src/ml/: dune  example.ml
example/src/ml/controllers/: dune  home.ml  index.eml.html  login.ml  static.ml
example/src/ml/util/: manifest.ml
example/view/: package-lock.json  package.json  vite.config.js
example/view/src/Pages/: About.vue  Home.vue  Users.vue
example/view/src/assets/: main.css
lib/: dream_inertia.ml  dream_inertia.mli  dune  inertia.ml  inertia.mli  loader.ml  middleware.ml
test/: dune  index.eml.html  test.ml
tests/: dune  inertia_tests.ml
view/: index.html  vite.config.js
view/src/: main.js
view/src/Pages/: Home.vue
