(lang dune 2.8)
(name dream-inertia)
(source (uri git+https://git.jm-bea.net/beajeanm/ocaml-inertia.git))
(homepage https://git.jm-bea.net/beajeanm/ocaml-inertia)
(bug_reports https://git.jm-bea.net/beajeanm/ocaml-inertia)
(license ISC)
(authors "Jean-Michel Bea")
(maintainers "Jean-Michel Bea")
(generate_opam_files true)
(implicit_transitive_deps false)
(package
 (name dream-inertia)
 (synopsis "Inertia handler from dream application")
 (description "Inertia handler from dream application")
 (depends
  (ocaml (>= 4.11))
  (base (>= v0.14.1))
  (ocamlformat (>= 0.19.0))
  (dream (>= 1.0.0~alpha2))
  (lwt (>= 5.4.0))
  (crunch (>= 3.2.0))
  (yojson (>= 1.7.0))
  (alcotest (and :with-test (>= 1.2.3)))
  (lwt_ppx (>= 2.0.2))
  (alcotest-lwt (and (>= 1.4.0) :with-test))))
